--- a/style.css
+++ b/style.css
@@ -1,19 +1,20 @@
 body {
+  background-color:rgb(224, 139, 59);
   display: flex;
   justify-content: center;
 }
 .container {
-  height: 256px;
-  width: 256px;
+  background-color: lightblue;
+  height: 500px;
+  width: 500px; 
   display: flex;
   flex-wrap: wrap;
   gap: 0px;
 }
 
 #grids {
-  width: 16px;
-  height: 16px;
-  background-color: lightblue;
-  border: 0px solid #ddd;
+  box-sizing: border-box;
+  background-color: white;
+  border: 0px none #ddd;
 }
 
